# SolUpg

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  deny.toml  package-lock.json  package.json  tsconfig.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: anchor.yml  docker.yml  rust.yml  sdk.yml  security.yml
Website/: demo.html  funding.html  index.html  quickstart.html  shared.js  styles.css
docs/: DOCUMENTATION_GUIDE.md
docs/architecture/: overview.md
docs/assets/: README.md
docs/development/: CURRENT_STATUS.md
docs/phase-1-onchain-programs/: README.md
docs/phase-2-routing-engine/: README.md
docs/phase-3-api-gateway/: README.md
docs/phase-4-clearing-reconciliation/: README.md
docs/phase-5-compliance-monitoring/: README.md
docs/phase-6-testing-deployment/: IMPLEMENTATION.md  README.md  runbook.md
docs/security/: audit-scope.md  threat-model.md
examples/: README.md
examples/qr-checkout/: .env.example  README.md  package.json  server.ts  tsconfig.json
examples/simple-payment/: .env.example  README.md  index.ts  package.json  tsconfig.json
load-tests/: README.md
load-tests/lib/: auth.js  fixtures.js
load-tests/scenarios/: create-payment.js  get-status.js  mixed-workflow.js  rate-limit.js
programs/solupg-escrow/: Cargo.toml
programs/solupg-escrow/src/: lib.rs
programs/solupg-payment/: Cargo.toml
programs/solupg-payment/src/: lib.rs
programs/solupg-splitter/: Cargo.toml
programs/solupg-splitter/src/: lib.rs
programs/solupg-swap/: Cargo.toml
programs/solupg-swap/src/: lib.rs
scripts/: README.md  deploy-devnet.sh  deploy-mainnet-beta.sh  run-all-services.sh  seed-db.sh
sdk/typescript/: package-lock.json  package.json  vitest.config.ts
sdk/typescript/src/: client.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts  types.test.ts
services/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
services/api-gateway/: Cargo.toml
services/api-gateway/src/: lib.rs  main.rs  state.rs
services/api-gateway/src/auth/: api_key.rs  jwt.rs  mod.rs
services/api-gateway/src/middleware/: rate_limit.rs
services/api-gateway/src/routes/: auth_routes.rs  directory.rs  escrows.rs  merchants.rs  mod.rs  payments.rs  solana_pay.rs  webhooks.rs
services/api-gateway/src/webhook/: delivery.rs  mod.rs
services/api-gateway/tests/: auth_tests.rs
services/clearing-engine/: Cargo.toml
services/clearing-engine/src/: dashboard.rs  indexer.rs  lib.rs  main.rs  models.rs  reconciliation.rs  settlement.rs
services/directory-service/: Cargo.toml
services/directory-service/migrations/: 20240101000001_create_aliases.sql  20240101000002_create_merchants.sql  20240101000003_add_preferred_token_to_aliases.sql
services/directory-service/src/: lib.rs  main.rs  state.rs
services/directory-service/src/models/: alias.rs  merchant.rs  mod.rs
services/directory-service/src/routes/: alias_routes.rs  merchant_routes.rs  mod.rs  verification_routes.rs
services/directory-service/src/services/: alias_service.rs  merchant_service.rs  mod.rs
services/directory-service/tests/: db_test.rs  handlers_test.rs
services/integration-tests/: Cargo.toml
services/integration-tests/src/: lib.rs
services/integration-tests/tests/: escrow_flow.rs  payment_flow.rs  splitter_flow.rs  swap_flow.rs
services/migrations/: 20240101000004_create_payment_intents.sql  20240101000005_create_api_keys.sql  20240101000006_create_webhooks.sql  20240101000007_create_transactions_ledger.sql  20240101000008_create_reconciliation.sql  20240101000009_create_settlements.sql  20240101000010_create_fraud_rules.sql  20240101000011_create_audit_trail.sql  20240101000012_create_alert_config.sql
services/monitoring/: Cargo.toml
services/monitoring/src/: alerts.rs  api.rs  audit.rs  fraud.rs  lib.rs  main.rs  metrics.rs  models.rs
services/routing-engine/: Cargo.toml
services/routing-engine/src/: events.rs  main.rs  state.rs  submitter.rs
services/routing-engine/src/builders/: anchor_ix.rs  direct_pay.rs  escrow.rs  mod.rs  split_pay.rs  swap_pay.rs
services/routing-engine/src/engine/: fee_calculator.rs  mod.rs  parser.rs  planner.rs  resolver.rs
services/routing-engine/src/routes/: intent_routes.rs  mod.rs
services/routing-engine/tests/: integration_test.rs
services/solupg-common/: Cargo.toml
services/solupg-common/src/: config.rs  error.rs  lib.rs  pda.rs  program_ids.rs  types.rs
tests/: solupg-escrow.ts  solupg-payment.ts  solupg-splitter.ts  solupg-swap.ts
