[workspace]
members = [
    "programs/solupg-payment",
    "programs/solupg-escrow",
    "programs/solupg-splitter",
    "programs/solupg-swap",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
