[package]
name = "solupg-escrow"
version = "0.1.0"
description = "SolUPG escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solupg_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=1.0.1"
anchor-spl = "=0.30.1"
