[package]
name = "solupg-payment"
version = "0.1.0"
description = "SolUPG core payment program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solupg_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
