[package]
name = "solupg-swap"
version = "0.1.0"
description = "SolUPG token swap integration program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solupg_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
