[package]
name = "routing-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "routing-engine"
path = "src/main.rs"

[dependencies]
solupg-common = { path = "../solupg-common" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }
solana-sdk = "2.1"
solana-client = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
borsh = "1.6"
sha2 = "0.10"
bs58 = "0.5"
dotenvy = "0.15"
anyhow = "1"
